k8s-v1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerok-next-dashboard-v1
spec:
  selector:
    app: zerok-next-dashboard-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
